Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -378,7 +378,6 @@ header.bk-header {
 .widget {
     .extendednavigation {
         margin:0px auto;
-        display:table;
         padding:20px 0px;
         @media @tablet {
             background-color: transparent;
@@ -392,8 +391,6 @@ header.bk-header {
             }
         }
         ul {
-            display: table;
-            float: none;
             margin: 0 auto;
             text-align: center;
             padding: 0;
